--- a/src/main/g8/project/build.properties
+++ b/src/main/g8/project/build.properties
@@ -1,8 +1,8 @@
 #Project properties
 #Mon Jul 26 01:15:53 EDT 2010
 project.organization=com.example
-project.name=unfiltered template
+project.name=$name$
 sbt.version=0.7.4
-project.version=0.0.1
+project.version=$version$
 build.scala.versions=2.8.0
 project.initialize=false
