--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,4 +2,4 @@ name=My Web Project
 version=0.1.0-SNAPSHOT
 unfiltered-version=0.4.0
 unfiltered-module=unfiltered
-description=This template generates an Unfiltered project.\nBy default it depends on the Unfiltered library only; for an \nembedded web server, set ufmodule to unfiltered-server.
+description=This template generates an Unfiltered project. By default it depends on the Unfiltered library only; for an embedded web server, set ufmodule to unfiltered-server.
