--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,5 @@
 name=My Web Project
 version=0.1.0-SNAPSHOT
-unfiltered-version=0.4.0
-unfiltered-module=unfiltered
-description=This template generates an Unfiltered project. By default it depends on the Unfiltered library only; for an embedded web server, set unfiltered-module to "unfiltered-server".
+unfiltered_version=0.1.4-SNAPSHOT
+unfiltered_module=unfiltered-server
+description=This template generates an Unfiltered project. By default it depends on "unfiltered-server"; for AJP support, set unfiltered_module to "unfiltered-ajp-server".
