--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,5 @@
 name=My Web Project
 version=0.1.0-SNAPSHOT
-unfiltered_version=0.1.4-SNAPSHOT
+unfiltered_version=0.1.4
 unfiltered_module=unfiltered-server
 description=This template generates an Unfiltered project. By default it depends on "unfiltered-server". For AJP support, set unfiltered_module to "unfiltered-ajp-server".
