--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,5 +1,4 @@
 name=My Web Project
 version=0.1.0-SNAPSHOT
-unfiltered_version=0.1.4
-unfiltered_module=unfiltered-server
+unfiltered_version=0.2.0-SNAPSHOT
 description=This template generates an Unfiltered project. By default it depends on "unfiltered-server". For AJP support, set unfiltered_module to "unfiltered-ajp-server".
