--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,8 @@
-name=My Web Project
+gae_app_name=My Google App Engine App
+gae_app_version=1
+org_id=com.example
+gae_sessions_enabled=false
+name=My Google App Engine Web Project
 version=0.1.0-SNAPSHOT
-unfiltered_version=0.2.2
-description=This template generates an Unfiltered project. By default it depends on "unfiltered-server". For AJP support, set unfiltered_module to "unfiltered-ajp-server".
+unfiltered_version=0.2.3
+description=This template generates a Google App Engine ready Unfiltered project.
