--- a/src/main/g8/project/build.properties
+++ b/src/main/g8/project/build.properties
@@ -1,6 +1,6 @@
 #Project properties
 #Mon Jul 26 01:15:53 EDT 2010
-project.organization=com.example
+project.organization=$org_id$
 project.name=$name$
 sbt.version=0.7.4
 project.version=$version$
