default gae name should have no spaces

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,4 @@
-gae_app_name=My Google App Engine App
+gae_app_name=mygoogleappengineapp
 gae_app_version=1
 org_id=com.example
 gae_sessions_enabled=false
