--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,8 +1,8 @@
-gae_app_name=mygoogleappengineapp
-gae_app_version=1
-org_id=com.example
-gae_sessions_enabled=false
-name=My Google App Engine Web Project
-version=0.1.0-SNAPSHOT
-unfiltered_version=0.5.1
-description=This template generates a Google App Engine ready Unfiltered project.
+description = This template generates a Google App Engine ready Unfiltered project.
+gae_app_name = mygoogleappengineapp
+gae_app_version = 1
+org_id = com.example
+gae_sessions_enabled = false
+name = My Google App Engine Web Project
+version = 0.1.0-SNAPSHOT
+unfiltered_version = ls(unfiltered, unfiltered)
